--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Roboto:wght@300;400;700&display=swap');
 
 
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
+
+.heroe{
+    height: 40vh;
+}
 
 .separador{
     background: rgb(82,34,208);
