--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 @import "./parciales/reset"; 
 @import "./parciales/header";
 @import "./parciales/hero"; 
-@import "./parciales/separador"
+@import "./parciales/separador"; 
 
 
 
