--- a/scss/parciales/_vars.scss
+++ b/scss/parciales/_vars.scss
@@ -1,2 +1,5 @@
 $color-principal: #F25f27; 
-$font-size: 5rem; 
+$color-secundario: #001F45;
+$font-size: 5rem;
+$font-parrafo: 2.5rem; 
+$flexible: flex; 
