--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid&family=Roboto:wght@300;400;700&display=swap');
 @import "./parciales/reset"; 
 @import "./parciales/header";
-@import "./parciales/hero"; 
-@import "./parciales/separador"; 
+@import "./parciales/main"; 
+@import "./parciales/footer";
+@import "./parciales/componentes"; 
+@import "./parciales/resposive"; 
 
 
 
