--- a/scss/parciales/_componentes.scss
+++ b/scss/parciales/_componentes.scss
@@ -7,3 +7,13 @@
     height: 8px;
     border: none; 
 }
+
+
+.btn{
+    background-color: #FF0033;
+    border: none; 
+    color: white; 
+    padding: 12px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+}
