--- a/estilos/parciales/_componentes.scss
+++ b/estilos/parciales/_componentes.scss
@@ -17,3 +17,11 @@
     border-radius: 3px;
     cursor: pointer;
 }
+
+
+.header-interno img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
