--- a/estilos/parciales/_footer.scss
+++ b/estilos/parciales/_footer.scss
@@ -2,8 +2,29 @@
 
 .footer{
     display: $flexible;
-    .footer__columna{
+    padding: 60px 40px;
+    background-color: #fff;
+        
+    &__columna{
         flex-basis: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    &__logo{
+        max-width: 200px;
+        margin: auto;
+    }
+    
+    &__list{
+        list-style: none;
+    }
+    
+    &__list a{
+        text-decoration: none;
+        margin: 10px 0px;
+        display: inline-block;
     }
 }
-
