Cambiamos la animacion y la contuvimos en las imagenes del index.html .complemento equipo

--- a/estilos/main.css
+++ b/estilos/main.css
@@ -154,6 +154,7 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 .equipo__titulo--grande {
