--- a/estilos/parciales/_equipo.scss
+++ b/estilos/parciales/_equipo.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: row;
         font-family: 'Roboto', sans-serif;
+        overflow: hidden;
     }
 
     &__titulo--grande{
