--- a/estilos/main.scss
+++ b/estilos/main.scss
@@ -4,13 +4,11 @@
 @import "./parciales/header";
 @import "./parciales/main"; 
 @import "./parciales/equipo";
-
-
-
 @import "./parciales/footer";
 @import "./parciales/componentes"; 
 @import "./parciales/utilitarias";
-@import "./parciales/resposive"; 
+@import "./parciales/media-queries"
+
 
 
 
