--- a/estilos/parciales/_equipo.scss
+++ b/estilos/parciales/_equipo.scss
@@ -1,4 +1,4 @@
-
+@import "./media-queries"; 
 .equipo{
     background-color: #FF6E00;
     color:#fff; 
@@ -11,6 +11,9 @@
         flex-direction: row;
         font-family: 'Roboto', sans-serif;
         overflow: hidden;
+        @include tablet{
+            flex-wrap: wrap;
+        }
     }
 
     &__titulo--grande{
@@ -51,6 +54,9 @@
         display: flex; 
         flex-direction: row;
         gap: 20px; 
+        @include tablet{
+            flex-wrap: wrap;
+        }
     }
     &__img{
         width: 100%;
